--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             <div class="project-card">
                 <img src="./assets/neolearn.png" alt="Project 2" />
                 <div class="project-info">
-                    <h3>Learning Institute</h3>
-                    <p>HTML, CSS, JS</p>
-                    <a href="https://rameshkannan-dev.github.io/Neo-Learning/" target="_blank">View Project</a>
+                    <h3>multiple disease prediction using machine learning</h3>
+                    <p>Python Libraries, CSS, HTML, ML</p>
+                    <a href="https://multiple-disease-prediction-streamlit-btl90xeri-ir980s-projects.vercel.app/" target="_blank">View Project</a>
                 </div>
             </div>
 
@@ -223,9 +223,9 @@
             <div class="project-card">
                 <img src="./assets/go bus.png" alt="Project 3" />
                 <div class="project-info">
-                    <h3>Bus Booking</h3>
-                    <p>HTML, CSS, JS</p>
-                    <a href="https://rameshkannan-dev.github.io/GO_BUS/" target="_blank">View Project</a>
+                    <h3>leaf disease detection</h3>
+                    <p>Machine Learning,CNN,Python Libraries and streamlit app</p>
+                    <a href="https://github.com/IR980/Images-Classification-Project/" target="_blank">View Project</a>
                 </div>
             </div>
 
@@ -329,3 +329,4 @@
 </body>
 
 </html>
+
