--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Irshad | Portfolio</title>
+    <title>Ramesh | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -203,9 +203,9 @@
             </div>
 
             <div class="project-card">
-                <img src="./assets/neolearn.png" alt="Project 2" />
+                <img src="./assets/multiple-disease-prediction-1.png" alt="Project 2" />
                 <div class="project-info">
-                    <h3>multiple disease prediction using machine learning</h3>
+                    <h3>multiple disease prediction using machine learning and streamlit app</h3>
                     <p>Python Libraries, CSS, HTML, ML</p>
                     <a href="https://multiple-disease-prediction-streamlit-btl90xeri-ir980s-projects.vercel.app/" target="_blank">View Project</a>
                 </div>
@@ -221,9 +221,9 @@
             </div>
 
             <div class="project-card">
-                <img src="./assets/go bus.png" alt="Project 3" />
+                <img src="./assets/leaf_disease_detection.png" alt="Project 3" />
                 <div class="project-info">
-                    <h3>leaf disease detection</h3>
+                    <h3>Leaf Disease Detection for Image Processing</h3>
                     <p>Machine Learning,CNN,Python Libraries and streamlit app</p>
                     <a href="https://github.com/IR980/Images-Classification-Project/" target="_blank">View Project</a>
                 </div>
@@ -329,4 +329,3 @@
 </body>
 
 </html>
-
